--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <body>
     <!-- Loading Screen -->
     <div class="loading-screen">
-      <img src="icons/logo.png" alt="Dropzy" />
+      <img src="/logo.png" alt="Dropzy" />
       <div class="loading-text">Dropzy</div>
     </div>
 
@@ -91,13 +91,13 @@
         <div class="logo">Dropzy</div>
         <a href="page4.html" class="skip-link">
           Skip
-          <img src="icons/arrow-forward.png" alt="Skip Icon" />
+          <img src="/arrow-forward.png" alt="Skip Icon" />
         </a>
       </header>
       <main>
         <div class="illustration">
           <img
-            src="icons/delivery-man.png"
+            src="/delivery-man.png"
             alt="Delivery Illustration"
             style="
               width: 100%;
