--- a/page14.html
+++ b/page14.html
@@ -19,7 +19,7 @@
     <div class="container page14">
       <header>
         <a href="page4.html" class="back-btn">
-          <img src="icons/back.png" alt="Back" />
+          <img src="back.png" alt="Back" />
         </a>
       </header>
       <main>
