--- a/page2.html
+++ b/page2.html
@@ -36,13 +36,13 @@
         <!-- Empty to maintain layout -->
         <a href="page4.html" class="skip-link">
           Skip
-          <img src="icons/arrow-forward.png" alt="Skip Icon" />
+          <img src="arrow-forward.png" alt="Skip Icon" />
         </a>
       </header>
       <main>
         <div class="illustration">
           <img
-            src="icons/map-icon-location.png"
+            src="map-icon-location.png"
             alt="Map Illustration"
             class="illustration-img"
           />
