--- a/page3.html
+++ b/page3.html
@@ -23,7 +23,7 @@
       <main>
         <div class="illustration">
           <img
-            src="icons/image1578.png"
+            src="image1578.png"
             alt="Map Illustration"
             class="illustration-img"
           />
