--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Loading Screen -->
     <div class="loading-screen">
       <img src="/logo.png" alt="Dropzy" />
-      <div class="loading-text">Dropzy</div>
+      <div class="loading-text"></div>
     </div>
 
     <!-- Main Page Content -->
