--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="logo">Dropzy</div>
         <a href="page4.html" class="skip-link">
           Skip
-          <img src="icons/arrow-forward.png" alt="Skip Icon" />
+          <img src="arrow-forward.png" alt="Skip Icon" />
         </a>
       </header>
       <br>
@@ -102,7 +102,7 @@
       <main>
         <div class="illustration">
           <img
-            src="icons/delivery-man.png"
+            src="delivery-man.png"
             alt="Delivery Illustration"
             style="
               width: 100%;
