--- a/page4.html
+++ b/page4.html
@@ -43,7 +43,7 @@
     <div class="container page4">
       <header>
         <a href="page3.html" class="back-btn">
-          <img src="back.png" alt="Back" />
+          <img src="icons/back.png" alt="Back" />
         </a>
       </header>
       <main>
@@ -68,14 +68,21 @@
           <p>OR</p>
           <span></span>
         </div>
-        <button class="social-btn">
-          <img src="google.png" alt="Google Icon" />
-          Continue with Google
-        </button>
-        <button class="social-btn">
-          <img src="apple.png" alt="Apple Icon" />
-          Continue with Apple
-        </button>
+        <a
+          href="https://accounts.google.com/o/oauth2/v2/auth"
+          class="social-btn-link"
+        >
+          <button class="social-btn">
+            <img src="icons/google.png" alt="Google Icon" />
+            Continue with Google
+          </button>
+        </a>
+        <a href="https://appleid.apple.com/account" class="social-btn-link">
+          <button class="social-btn">
+            <img src="icons/apple.png" alt="Apple Icon" />
+            Continue with Apple
+          </button>
+        </a>
         <p class="signup-link">
           Not a member yet? <a href="page5.html">Register Now</a>
         </p>
