--- a/page4.html
+++ b/page4.html
@@ -43,7 +43,7 @@
     <div class="container page4">
       <header>
         <a href="page3.html" class="back-btn">
-          <img src="icons/back.png" alt="Back" />
+          <img src="back.png" alt="Back" />
         </a>
       </header>
       <main>
@@ -73,13 +73,13 @@
           class="social-btn-link"
         >
           <button class="social-btn">
-            <img src="icons/google.png" alt="Google Icon" />
+            <img src="google.png" alt="Google Icon" />
             Continue with Google
           </button>
         </a>
         <a href="https://appleid.apple.com/account" class="social-btn-link">
           <button class="social-btn">
-            <img src="icons/apple.png" alt="Apple Icon" />
+            <img src="apple.png" alt="Apple Icon" />
             Continue with Apple
           </button>
         </a>
