--- a/page5.html
+++ b/page5.html
@@ -62,7 +62,9 @@
             placeholder="Confirm password"
           />
         </div>
+        <a href="page4.html">
         <button class="primary-btn">Register</button>
+        </a>
         <br />
         <p class="signup-link">
           Are you a member already? <a href="page4.html">Login</a>
