--- a/page4.html
+++ b/page4.html
@@ -62,7 +62,10 @@
           />
         </div>
         <a href="page13.html" class="forgot-password">Forgot Password?</a>
-        <button class="primary-btn">Login</button>
+        
+        <a href="page16.html">
+          <button class="primary-btn">Login</button>
+        </a>
         <div class="divider">
           <span></span>
           <p>OR</p>
